# libre-sine

./: .gitignore  Cargo.toml  README.md  RUN_INSTRUCTIONS.md  Shuttle.toml  build.sh  deploy.sh  run_local.sh
docs/: movie-collection.json  movie.ts  movies.json  requirements.md
frontend/: app.css  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CollectionCard.tsx  CollectionModal.tsx  MovieCard.tsx  MovieDisplay.tsx  MovieForm.tsx  MovieImportModal.tsx  SearchBar.tsx
frontend/src/components/navigation/: MobileHeader.tsx  Sidebar.tsx
frontend/src/hooks/: useDebounce.ts  useFavorites.ts  useMovieActions.ts  useMovieCollections.ts  useMovies.ts  usePagination.ts  usePersistedState.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: CollectionsPage.tsx  FavoritesPage.tsx  MoviesPage.tsx
frontend/src/services/: api.ts  indexedDB.ts
frontend/src/types/: index.ts  movie.ts
frontend/src/utils/: validation.ts
migrations/: 001_movie_collections.sql  002_movies.sql  schema.sql
src/: lib.rs  main.rs
src/handlers/: mod.rs  movie_collections.rs  movies.rs
src/middleware/: cors.rs
src/models/: mod.rs  movie.rs  movie_collection.rs
src/services/: database.rs
static/: index.html
static/assets/: CollectionsPage-DN460KXj.js  FavoritesPage-B6WEFZPw.js  MovieForm-DqYBQSq_.js  MoviesPage-CSj5adnn.js  SearchBar-BWBS20zz.js  StarIcon-CiHnNQHP.js  index-BGyt-nzx.css  index-DJiFHe4L.js
